Modified the GPU data tables to expand to three columns The design is now adaptive, on wider screens the data will be presented in three separate tables in a horizontal manner, taking advantage of a device larger screen width, on mobile the width will adjust to become vertical CSS still needs to be finished and fixed Current UI build is on the Alpha stage, requires major fixes and code refactoring

--- a/gpulist/client/src/App.css
+++ b/gpulist/client/src/App.css
@@ -1,5 +1,4 @@
 #root {
-  max-width: 550px;
   width: 100%;
   margin: 0 auto;
   padding: 2rem;
@@ -18,12 +17,59 @@ table {
 }
 
 h1 {
+  max-width: 500px;
   background-color: rgba(0, 0, 0, 0.9);
   border: 0.15rem solid;
-  border-style: double;
+  border-style: groove;
   font-size: 2.5rem;
   text-decoration: underline;
   padding: 1rem;
+  margin: 0 auto;
+}
+
+.top-buttons {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem; /* space between them */
+  max-width: 500px;
+  margin: 0 auto;
+}
+
+.top-buttons button {
+  flex: 1;      /* makes all buttons equal width */
+}
+
+.container {
+  max-width: 900px;
+  text-align: center;
+  border: 5px solid #303030;
+  border-style: groove;
+  margin-bottom: 2rem;
+  border-radius: 1rem;
+  margin: 0 auto;
+}
+
+.tables {
+  display: flex;
+  justify-content: center;
+  gap: 0; /* Space between tables */
+}
+
+.table-main-header {
+  background-color: black;
+  padding: 0.2rem;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+}
+
+.container h2 {
+  border: 3px solid #303030;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
 }
 
 #add-gpu-table,
@@ -33,13 +79,12 @@ h1 {
   border: 2px solid black;
   padding: 1rem;
   border-style: groove;
-  margin-bottom: 1rem;
+  margin: 1rem auto;
   background-color: rgba(12, 12, 12, 0.9);
 }
 
 #find-gpu-field {
   margin: 0 auto;
-  max-width: 95%;
   padding: 1rem;
   border-radius: 1rem;
   font-family: 'digital-dreamers';
@@ -70,7 +115,6 @@ h1 {
 
 #page-index {
   margin: 0 auto;
-  max-width: 90%;
   max-height: 300px;
   border-radius: 1rem;
   margin-bottom: 1rem;
@@ -144,6 +188,7 @@ button:focus {
   background-color: rgba(0, 0, 0, 0.75);
   border-radius: 1rem;
   box-sizing: border-box; /* Prevents the are to be wider than the others */
+  margin: 0 auto;
   margin-bottom: 2rem;
   border: 0.25rem solid black;
   border-style: groove;
@@ -166,9 +211,9 @@ button:focus {
 
 .gpu-data-table {
   background-color: rgba(0, 0, 0, 0.75);
-  border: 0.2rem solid;
-  border-radius: 1rem;
-  border-style: double;
+  border: 0.1rem solid;
+  border-radius: 0;
+  border-collapse: collapse;
 }
 
 .gpu-data-table th, 
@@ -271,9 +316,28 @@ button:focus {
 }
 
 
-@media only screen and (hover: none) and (pointer: coarse) {
-  #root {
-    padding: 0.5rem;
+@media only screen and (hover: none) and (pointer: coarse),
+  only screen and (max-width: 900px) {
+  .container {
+    width: 100%;
+    max-width: 500px;
+    min-width: 300px;
+  }
+
+  .tables {
+    flex-direction: column;
+  }
+
+  .gpu-data-table {
+    border: none;
+  }
+
+  #add-gpu-table,
+  #page-index,
+  #find-gpu-field,
+  .button-area {
+    max-width: 95%;
+    margin: 1rem auto;
   }
 
   #add-gpu-table label {
